cabal-version: 3.0
name:          latex-svg-hakyll
version:       0.3
synopsis:      Use actual LaTeX to render formulae inside Hakyll pages
description:
  This library provides functions to render all math formulae inside
  Pandoc-processed Hakyll pages using real LaTeX.
  .
  https://github.com/liamoc/latex-formulae

homepage:      https://github.com/phadej/latex-svg#readme
license:       BSD-3-Clause
license-file:  LICENSE
author:        Oleg Grenrus, Liam O'Connor
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:     2020 Oleg Grenrus, 2015-2019 Liam O'Connor
category:      Image
build-type:    Simple

-- cabal-fmt: fragment ../tested-with.fragment
tested-with:   GHC ==8.10.7 || ==9.2.8 || ==9.6.3

source-repository head
  type:     git
  location: https://github.com/phadej/latex-svg
  subdir:   latex-svg-hakyll

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  Hakyll.Contrib.LaTeX
  build-depends:
    , base              >=4.14  && <4.19
    , hakyll            ^>=4.16
    , latex-svg-image   ^>=0.3
    , latex-svg-pandoc  ^>=0.3
    , lrucache          ^>=1.2
    , pandoc-types      ^>=1.23
