cabal-version:      2.2
name:               latex-svg-pandoc
version:            0.2.1
synopsis:
  Render LaTeX formulae in pandoc documents to images with an actual LaTeX

description:
  This library provides utility functions to convert LaTeX equations to images
  in Pandoc documents using the @latex-svg-image@ package.  It requires an
  actual LaTeX installation to work (@latex@, @dvisvgm@).
  .
  An executable is also provided which can be used as a Pandoc filter from the
  commandline, which allows this technique to be used even for standalone Pandoc
  jobs.
  .
  This is a fork of https://github.com/liamoc/latex-formulae

homepage:           http://github.com/phadej/latex-svg#readme
license:            BSD-3-Clause
license-file:       LICENSE
author:             Oleg Grenrus, Liam O'Connor
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:          2020 Oleg Grenrus, 2015-2019 Liam O'Connor
category:           Image
build-type:         Simple

-- cabal-fmt: fragment ../tested-with.fragment
tested-with:        GHC ==8.10.7 || ==9.6.4 || ==9.8.1
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/phadej/latex-svg
  subdir:   latex-svg-pandoc

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  Image.LaTeX.Render.Pandoc
  build-depends:
    , base             >=4.14.3   && <4.21
    , bytestring       >=0.10.12  && <0.13
    , directory        ^>=1.3.6
    , filepath         >=1.4.2.1  && <1.6
    , latex-svg-image  ^>=0.2
    , pandoc-types     ^>=1.23.1
    , text             ^>=1.2.4.1 || ^>=2.1

executable latex-svg-filter
  hs-source-dirs:   filter
  main-is:          Main.hs
  ghc-options:      -Wall
  build-depends:
    , base
    , latex-svg-image
    , latex-svg-pandoc
    , pandoc-types

  default-language: Haskell2010
